Create code for demo

--- a/Movies/Base.lproj/Main.storyboard
+++ b/Movies/Base.lproj/Main.storyboard
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13178.6" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="oKA-Rz-SnJ">
+    <device id="retina5_5" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13156.2"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +12,138 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="n3W-8b-fVa">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="RZz-P7-Yoh">
+                                    <size key="itemSize" width="200" height="200"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" contentMode="center" reuseIdentifier="movie-cell" id="t8p-UU-KyV" customClass="MovieCollectionViewCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CT2-Ix-0To">
+                                                    <rect key="frame" x="0.0" y="0.0" width="200" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="ThE-Uh-rLe"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="brC-sS-wVx">
+                                                    <rect key="frame" x="0.0" y="29" width="200" height="171"/>
+                                                </imageView>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="CT2-Ix-0To" firstAttribute="leading" secondItem="t8p-UU-KyV" secondAttribute="leading" id="FSE-qP-APi"/>
+                                            <constraint firstAttribute="bottom" secondItem="brC-sS-wVx" secondAttribute="bottom" id="IAR-Te-wHr"/>
+                                            <constraint firstAttribute="trailing" secondItem="brC-sS-wVx" secondAttribute="trailing" id="Ilg-DB-D05"/>
+                                            <constraint firstItem="brC-sS-wVx" firstAttribute="leading" secondItem="t8p-UU-KyV" secondAttribute="leading" id="PNq-uH-fSJ"/>
+                                            <constraint firstItem="brC-sS-wVx" firstAttribute="top" secondItem="CT2-Ix-0To" secondAttribute="bottom" constant="8" id="cIh-1z-RFa"/>
+                                            <constraint firstAttribute="trailing" secondItem="CT2-Ix-0To" secondAttribute="trailing" id="ikR-Fg-23Z"/>
+                                            <constraint firstItem="CT2-Ix-0To" firstAttribute="top" secondItem="t8p-UU-KyV" secondAttribute="top" id="lco-gc-dMt"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="imageView" destination="brC-sS-wVx" id="d2H-cb-N4z"/>
+                                            <outlet property="titleLabel" destination="CT2-Ix-0To" id="nPH-cN-3Lb"/>
+                                            <segue destination="e4f-YM-588" kind="show" id="tKo-Fx-THR"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="U3I-Zj-TUQ"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Bug-jX-jaJ"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="n3W-8b-fVa" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="0mv-u0-WBa"/>
+                            <constraint firstItem="n3W-8b-fVa" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="QKl-eL-Sdd"/>
+                            <constraint firstItem="n3W-8b-fVa" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="iOO-FX-bg6"/>
+                            <constraint firstItem="n3W-8b-fVa" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="qDa-UQ-HHJ"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="2hQ-RW-UfU"/>
+                    <connections>
+                        <outlet property="collectionView" destination="n3W-8b-fVa" id="xTa-Tb-1vn"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="443.47826086956525" y="155.70652173913044"/>
+        </scene>
+        <!--Movie Detail View Controller-->
+        <scene sceneID="51s-Hc-iBI">
+            <objects>
+                <viewController id="e4f-YM-588" customClass="MovieDetailViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="clm-Sg-v78">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IwP-3q-GLW">
+                                <rect key="frame" x="20" y="63.999999999999986" width="374" height="38.333333333333321"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FGT-1v-GKN">
+                                <rect key="frame" x="0.0" y="122.33333333333331" width="414" height="613.66666666666674"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.7019608021" green="0.7019608021" blue="0.7019608021" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="FGT-1v-GKN" firstAttribute="top" secondItem="IwP-3q-GLW" secondAttribute="bottom" constant="20" id="7RR-1k-iHK"/>
+                            <constraint firstItem="FGT-1v-GKN" firstAttribute="trailing" secondItem="dH3-qd-jBX" secondAttribute="trailing" id="AlS-Bd-dlU"/>
+                            <constraint firstItem="IwP-3q-GLW" firstAttribute="top" secondItem="dH3-qd-jBX" secondAttribute="top" id="G4i-qf-TJ0"/>
+                            <constraint firstItem="FGT-1v-GKN" firstAttribute="leading" secondItem="dH3-qd-jBX" secondAttribute="leading" id="adx-1T-HfY"/>
+                            <constraint firstItem="IwP-3q-GLW" firstAttribute="leading" secondItem="dH3-qd-jBX" secondAttribute="leading" constant="20" id="iMe-nc-NLm"/>
+                            <constraint firstItem="FGT-1v-GKN" firstAttribute="bottom" secondItem="dH3-qd-jBX" secondAttribute="bottom" id="l5X-xC-uVP"/>
+                            <constraint firstItem="dH3-qd-jBX" firstAttribute="trailing" secondItem="IwP-3q-GLW" secondAttribute="trailing" constant="20" id="naK-S6-cMg"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="dH3-qd-jBX"/>
+                    </view>
+                    <connections>
+                        <outlet property="imageView" destination="FGT-1v-GKN" id="voi-1W-4nB"/>
+                        <outlet property="titleLabel" destination="IwP-3q-GLW" id="WVk-7Z-jRR"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BR1-tZ-wc7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1255.072463768116" y="155.70652173913044"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="yek-K9-kqU">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="oKA-Rz-SnJ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="rTI-gT-L1C">
+                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="lIZ-YR-9KC"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xLq-Hr-Zxf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-372" y="156"/>
         </scene>
     </scenes>
 </document>
